# antinna.in

./: README.md
backend/: .env  .gitignore  Cargo.toml  README.md  config.toml
backend/certs/: cert.pem  key.pem
backend/locales/: en.json  es.json  fr.json  hi.json
backend/migrations/: 20220214043413_extension.sql  20240214043329_trigger.sql  20251001143156_users.sql  20260214024934_auth_providers.sql  20260215155938_categories.sql  20260217031125_sessions.sql
backend/secrets/: firebase.json
backend/src/: lib.rs  main.rs
backend/src/config/: firebase_admin_config.rs  firebase_web_config.rs  mod.rs
backend/src/core/: mod.rs
backend/src/core/errors/: mod.rs
backend/src/core/services/: auth_service.rs  i18n_service.rs  mod.rs
backend/src/firebase/: mod.rs
backend/src/hoops/: auth.rs  jwt.rs  mod.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/config/: db_config.rs  firebase_admin_config.rs  firebase_web_config.rs  log_config.rs  mod.rs
backend/src/infrastructure/i18n/: mod.rs
backend/src/infrastructure/log/: mod.rs
backend/src/infrastructure/persistence/: mod.rs
backend/src/interface/http/: mod.rs
backend/src/models/: mod.rs
backend/src/routers/: auth.rs  demo.rs  mod.rs  user.rs
backend/src/utils/: mod.rs
backend/views/: auth.html  error_404.html  hello.html  verify_link.html
blogger/: indie.xml
docker/: db_down.bat  db_up.bat
docker/db/: Dockerfile.postgres  docker-compose.yaml
docker/db/init-scripts/: init.sql
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
(+1 files in other folders)
