[package]
name = "backend"
version = "0.1.1"
edition = "2024"
rust-version = "1.89"
readme = "./README.md"

[dependencies]
anyhow = "1"
figment = { version = "0.10", features = ["env", "toml"] }
jsonwebtoken = {version = "10", features = ["rust_crypto"]}
rust-embed = "8"
salvo = {version = "0.89.1", features = ["anyhow", "cookie", "cors", "jwt-auth", "oapi", "serve-static", "rustls", "logging", "test","quinn"]}
serde = { version = "1", features = ["derive"] }
thiserror = "2"
time = "0.3"
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
validator = {version = "0.20", features = ["derive"]}
#ulid = "1"
argon2 = "0.5"
cookie = "0.18"
dotenvy = "0.15"
tracing-appender ="0.2"
tracing-subscriber = {version = "0.3", features = ["std", "fmt", "env-filter", "tracing-log", "time", "local-time", "json"]}
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "postgres","uuid", "chrono", "json"]}
askama = "0.15.4"
rand = "0.10.0"
# that version is must for rustls
rustls = { version = "0.23", features = ["ring"] }
firebase-admin-sdk = {version = "0.2.4", features = ["auth","messaging"] } #Trait `Debug` is not implemented for `FirebaseApp` [E0277]
uuid = { version = "1.21.0", features = ["serde","v7","std"] }
chrono = { version = "0.4.43", features = ["serde"] }
serde_json = "1.0.149"
